Add temporary display

--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -204,6 +204,7 @@
                                     </thead>
                                     <tbody>
                                     {% for res in community_resources %}
+                                        <div name="temp">{{ res.resource_title }}</div>
                                         <tr class="data-row">
                                             {# Selection controls #}
                                             <td>
