--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -45,7 +45,7 @@
         <div class="full-width-tabs-container" id="user-profile-tabs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs full-width-tabs" role="tablist">
-                <li role="presentation">
+                <li role="presentation" class="active">
                     <a href="#public" aria-controls="public" role="tab" data-toggle="tab">
                         <i class="glyphicon glyphicon-file"></i>&nbsp;PUBLIC</a>
                 </li>
@@ -55,7 +55,7 @@
             <!-- Tab panes -->
             <div class="tab-content">
                 <!-- PUBLIC -->
-                <div role="tabpanel" class="tab-pane fade" id="public">
+                <div role="tabpanel" class="tab-pane fade in active" id="public">
                         <div class="row">
                             <div class="col-lg-2" id="facets">
                                 <div class="panel panel-default">
