--- a/hs_manish/templates/index.html
+++ b/hs_manish/templates/index.html
@@ -4,8 +4,10 @@
 	<title>Home Page</title>
 </head>
 <body>
-	<h1>  You can follow the following links </h1>
+	<h1>  Demonstration in the implementation of dashboard and resource landing page </h1>
 	<a href="{% url 'resource_landing' %}">Resource landing Page</a>
-	<a href="{% url 'dashboard' %}">Dashboard</a>
+	<br>
+        <a href="{% url 'dashboard' %}">Dashboard</a>
+        <p> Hope you enjoy it!! </p>
 </body>
 </html>
