--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -716,7 +716,7 @@
                                                 <img src="{{ STATIC_URL }}img/resource-icons/multidimensional48x48.png"
                                                      alt="{{ resource_type }}"
                                                      title="{{ resource_type }}"/>
-                                            {% elif res.resource_type == "Time Series" %}
+                                            {% elif res.resource_type == "TimeSeriesResource" %}
                                                 <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
                                                      alt="{{ resource_type }}"
                                                      title="{{ resource_type }}"/>
